clasp 3.3.4:
  * fixed: https://github.com/potassco/clasp/pull/22
  * fixed: https://github.com/potassco/clasp/issues/16
  * fixed: https://github.com/potassco/clasp/issues/18
  * fixed: possible infinite loop in detection of problem type from input.
  * fixed: Atoms of incremental programs not always marked as frozen.
  * added internal interface for user-defined statistics
    (https://github.com/potassco/clasp/pull/23)
  * extended ClingoPropagatorInit to support both global and per-solver watches.

clasp 3.3.3: Sunday, 5th November 2017
  * fixed: possible race condition in Windows alarm handling (libpotassco)
  * fixed: state not fully reset in incremental acyc check
  * fixed: facade progress state not reset after solving step
  * fixed: https://github.com/potassco/clasp/issues/11
  * fixed: https://github.com/potassco/clasp/issues/13
  * https://github.com/potassco/clasp/issues/12

clasp 3.3.2: Saturday, 29th July 2017
  * fixed: missing lower bound output in unsat-core optimization for bounds < 0
  * fixed: conflict clauses not always tagged with assumptions in unsat-core optimization
  * fixed: invalid reallocation of vector during theory propagation
  * fixed: https://github.com/potassco/clingo/issues/45
  * fixed: https://github.com/potassco/clasp/issues/10
  * added workaround for bug #81365 in gcc 7.1
    (https://gcc.gnu.org/bugzilla/show_bug.cgi?id=81365)
  * added support for <EOL> as terminator for minweight constraint in dimacs input

clasp 3.3.1: Wednesday, May 3rd 2017 (internal only)
  * added support for partial checks in clingo propagator

clasp 3.3.0: Friday, 28th April 2017
  * switched to MIT license
  * added support for unsatisfiable core shrinking via option "--opt-usc-shrink"
  * added support for core-guided optimization algorithms K and ONE
  * CLI changes:
    - changed syntax of option  "--opt-strategy" (old syntax is still supported but deprecated)